# veronex

./: .claudeignore  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.veronex-mcp  Dockerfile.weather-mcp  LICENSE  Makefile  README.md  RUNBOOK.md  SECURITY.md  docker-compose.agent.yml  docker-compose.ollama.yml  docker-compose.yml
crates/inferq/: Cargo.toml
crates/inferq/.sqlx/: query-018e4416f2c4bb533dcffdca95c0e9d2a2887e4513a582e683a71bbf3fa9ad7e.json  query-14e37307815b69e09e464981ed2cd8cc9589401803a857301ace4363f6cfe37c.json  query-3794578a5eae25a5340f0a7b1354180f01da15950b58e6bdaf6b17e728782608.json  query-3fad4636aa7cce8931df80b6734ebc36b1f486ff7870a8ba33ad9542fd14d96b.json  query-5021e658a20ece96d82182206d5de1503b9a8c53d14498819a73a28e5fa30e40.json  query-5b54f3d18c0bf9b68985c468600a66b48c8bf8a400ae49629f2f4458289bfef2.json  query-60cf9e98070911226b32fabd8f08e1a453dd271b0d026f1fdc08017124148c7f.json  query-9df6e4fb328331d024be547b29163ed08bce79d157a3c32a8c5f05e7cc43b7f4.json  query-a3b94f5276f14e0ef8d3dddb5cff7497e92ef2965f881780922a5d31e247a89b.json  query-b947fa3284027afd73ec31eff70649e553d36b47f99338b036b7e47b5d8ec86c.json  query-bd459493d0a6ee427802ec079cbeeeda1ff9d5959a3211566089f43530ff51d6.json  query-cf50ab18b499927d6d77037e23aa1ec9ec09a0d986b8133a83f869b82ba2e978.json  query-d7ee5a21972728b0711a5bbae1e92f057f11e15b993904dbb8fb2968bf5e3e44.json
crates/inferq/migrations/: 20260222000002_jobs.sql  20260222000003_backends.sql  20260224000004_add_result_text.sql  20260225000005_backend_agent_url.sql  20260225000006_backend_gpu_index.sql  20260225000007_backend_total_ram_mb.sql  20260225000008_backend_node_exporter_url.sql  20260225000009_gpu_servers.sql  20260225000010_backend_server_id.sql  20260225000011_backend_drop_server_fields.sql  20260225000012_gpu_server_drop_host.sql  20260225000013_gpu_server_drop_total_ram_mb.sql  20260225000014_job_api_key_id.sql  20260225000015_job_latency_ms.sql  20260225000016_backend_rate_limits.sql  20260226000017_gemini_rate_limit_policies.sql  20260226000018_backend_drop_rate_limits.sql  20260226000019_gemini_policy_free_tier_flag.sql  20260226000020_job_ttft_completion_tokens.sql  20260226000021_api_key_deleted_at.sql  20260226000022_backend_selected_models.sql  20260227000023_gemini_sync_config.sql  20260227000024_gemini_models.sql  20260227000025_gemini_policy_rate_limit_update.sql  20260228000026_ollama_models.sql  20260228000027_ollama_sync_jobs.sql  20260228000028_drop_gen_random_uuid_defaults.sql  20260228000029_job_prompt_tokens.sql  20260228000030_job_cached_tokens.sql  20260228000031_job_source.sql  20260228000032_api_key_name_unique.sql  20260228000033_api_key_type.sql  20260228000034_accounts.sql  20260228000035_api_key_account_id.sql  20260301000036_account_sessions.sql  20260301000037_job_account_id.sql  20260301000038_api_key_tier.sql  20260302000039_model_capacity.sql  20260302000040_api_key_name_not_unique.sql  20260302000041_job_api_format.sql  (+7 more)
crates/inferq/src/: lib.rs  main.rs
crates/inferq/src/application/use_cases/: inference.rs
crates/inferq/src/domain/: enums.rs  errors.rs  value_objects.rs
crates/inferq/src/domain/entities/: account.rs  api_key.rs  mod.rs
crates/inferq/src/domain/services/: api_key_generator.rs  mod.rs
crates/inferq/src/infrastructure/outbound/: backend_router.rs  circuit_breaker.rs  health_checker.rs  hw_metrics.rs  mod.rs  session_grouping.rs
crates/veronex/: Cargo.toml  Dockerfile
crates/veronex-agent/: Cargo.toml  Dockerfile
crates/veronex-agent/src/: capacity_push.rs  health.rs  heartbeat.rs  main.rs  mcp_discover.rs  orphan_sweeper.rs  otlp.rs  scraper.rs  shard.rs
crates/veronex-agent/src/persistence/: mod.rs
crates/veronex-analytics/: Cargo.toml  Dockerfile
crates/veronex-analytics/src/: main.rs  otel.rs  state.rs
crates/veronex-analytics/src/handlers/: audit.rs  ingest.rs  mcp.rs  metrics.rs  mod.rs  performance.rs  usage.rs
crates/veronex-consumer/: Cargo.toml  Dockerfile
crates/veronex-consumer/src/: clickhouse.rs  config.rs  main.rs  otlp.rs
crates/veronex-consumer/src/handlers/: logs.rs  metrics.rs  traces.rs
crates/veronex-embed/: Cargo.toml  Dockerfile
crates/veronex-embed/src/: lib.rs
crates/veronex-mcp/: Cargo.toml  Dockerfile  build.rs
crates/veronex-mcp/src/: circuit_breaker.rs  client.rs  lib.rs  result_cache.rs  session.rs  tool_cache.rs  types.rs
crates/veronex-mcp/src/geo/: mod.rs
crates/veronex-mcp/src/tools/: analyze_image.rs  datetime.rs  mod.rs  weather.rs  web_search.rs
crates/veronex-mcp/src/vector/: mod.rs  selector.rs  tests.rs  tool_indexer.rs  vespa_client.rs
crates/veronex/.sqlx/: query-24ac891507f26f71c2ae000cf968c70550b6a1303033f5548da30649be03e71f.json  query-28024148a742cbf5aa25622a01155df272cce1d6a39526fcb46a8e9452fe6e11.json  query-2931fc09fcd56e51ec24a44a1c66de098169915cb5a22741ddf54fca6d04bcf4.json  query-31fd2f4fac96ec392176587f5f5182bf0583ded7a46e85e7c9bc11da3cbfc7aa.json  query-36a3a874dc5ee7fa394c6c712cde2ba6d0d6067988004b593aa82309897fca5c.json  query-81038ed287acc34590083200526bf42f392569de0891d86e297cce8087caedad.json  query-83aea51890bcca7fe9bde0f48aee6a61d169992b039dff2525a57e54f4dd55a8.json  query-c6d141d39d9bec2ac9f07a26ea6eeb0f2858ab91d21ccdfc7248e8b3946d98ca.json  query-c701efbc7d38d1b6f2db74324221e7bcb3a608216b2420ff498cc2f52f269b64.json  query-d8d692636c966a0171cff5e0424f13b4b5abb817bca8f90dcb5b266158457c19.json
crates/veronex/migrations/: 0000000001_init.sql  0000000002_remove_seed_data.sql  0000000002_s3_conversation_store.sql  0000000003_conversations_source.sql  0000000003_drop_agent_url.sql
crates/veronex/src/: main.rs
crates/veronex/src/application/use_cases/: inference.rs  mod.rs  placement_planner.rs
crates/veronex/src/bootstrap/: background.rs  config.rs  mod.rs  repositories.rs
crates/veronex/src/domain/: constants.rs  enums.rs  errors.rs  mod.rs  value_objects.rs
crates/veronex/src/domain/entities/: mod.rs  (+4 more)
workspace-hack/: Cargo.toml  build.rs
workspace-hack/src/: lib.rs
(+960 files in other folders)
