[workspace]
members = [
    "crates/veronex",
    "crates/veronex-analytics",
    "crates/veronex-agent",
    "crates/veronex-consumer",
    "crates/veronex-mcp",
    "crates/veronex-embed",
    "workspace-hack",
]
resolver = "2"

[profile.dev]
opt-level = 0
debug = "line-tables-only"
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
incremental = false

[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 4
incremental = false
