[package]
name = "workspace-hack"
version = "0.0.1"
edition = "2024"
publish = false

### BEGIN HAKARI SECTION
[dependencies]
base64 = { version = "0.22" }
bitflags = { version = "2", default-features = false, features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-utils = { version = "0.8" }
crypto-common = { version = "0.1", default-features = false, features = ["getrandom", "std"] }
either = { version = "1", features = ["serde", "use_std"] }
form_urlencoded = { version = "1" }
futures-channel = { version = "0.3", features = ["sink"] }
futures-core = { version = "0.3" }
futures-executor = { version = "0.3" }
futures-io = { version = "0.3" }
futures-sink = { version = "0.3" }
futures-util = { version = "0.3", features = ["channel", "io", "sink"] }
hyper = { version = "1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "client-proxy", "server-auto", "service"] }
log = { version = "0.4", default-features = false, features = ["std"] }
md-5 = { version = "0.10" }
num-traits = { version = "0.2", default-features = false, features = ["i128", "std"] }
percent-encoding = { version = "2" }
rand = { version = "0.8", features = ["small_rng"] }
regex-automata = { version = "0.4", default-features = false, features = ["dfa-build", "dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf-inline", "perf-literal", "std", "unicode"] }
regex-syntax = { version = "0.8" }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["alloc", "derive", "rc"] }
serde_core = { version = "1", features = ["alloc", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = { version = "0.10" }
slab = { version = "0.4" }
smallvec = { version = "1", default-features = false, features = ["const_new", "serde"] }
sqlx-core = { version = "0.8", features = ["_rt-tokio", "any", "chrono", "json", "migrate", "offline", "uuid"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["any", "chrono", "json", "migrate", "offline", "uuid"] }
subtle = { version = "2" }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["fs", "net"] }
tokio-util = { version = "0.7", features = ["codec", "io", "rt"] }
tower = { version = "0.5", default-features = false, features = ["limit", "log", "make", "timeout", "util"] }
tracing = { version = "0.1", features = ["log"] }
tracing-core = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }

[build-dependencies]
base64 = { version = "0.22" }
bitflags = { version = "2", default-features = false, features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-utils = { version = "0.8" }
crypto-common = { version = "0.1", default-features = false, features = ["getrandom", "std"] }
either = { version = "1", features = ["serde", "use_std"] }
form_urlencoded = { version = "1" }
futures-channel = { version = "0.3", features = ["sink"] }
futures-core = { version = "0.3" }
futures-io = { version = "0.3" }
futures-sink = { version = "0.3" }
futures-util = { version = "0.3", features = ["channel", "io", "sink"] }
log = { version = "0.4", default-features = false, features = ["std"] }
md-5 = { version = "0.10" }
num-traits = { version = "0.2", default-features = false, features = ["i128", "std"] }
percent-encoding = { version = "2" }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["alloc", "derive", "rc"] }
serde_core = { version = "1", features = ["alloc", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = { version = "0.10" }
slab = { version = "0.4" }
smallvec = { version = "1", default-features = false, features = ["const_new", "serde"] }
sqlx-core = { version = "0.8", features = ["_rt-tokio", "any", "chrono", "json", "migrate", "offline", "uuid"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["any", "chrono", "json", "migrate", "offline", "uuid"] }
subtle = { version = "2" }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["fs", "net"] }
tracing = { version = "0.1", features = ["log"] }
tracing-core = { version = "0.1" }
uuid = { version = "1", features = ["serde", "v4", "v7"] }

[target.x86_64-unknown-linux-gnu.dependencies]
hyper-rustls = { version = "0.27", default-features = false, features = ["aws-lc-rs", "http1", "http2", "native-tokio", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["prefer-post-quantum", "std", "tls12"] }
tower = { version = "0.5", default-features = false, features = ["retry"] }
tower-http = { version = "0.6", features = ["cors", "follow-redirect", "trace"] }

[target.x86_64-unknown-linux-musl.dependencies]
hyper-rustls = { version = "0.27", default-features = false, features = ["aws-lc-rs", "http1", "http2", "native-tokio", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["prefer-post-quantum", "std", "tls12"] }
tower = { version = "0.5", default-features = false, features = ["retry"] }
tower-http = { version = "0.6", features = ["cors", "follow-redirect", "trace"] }

### END HAKARI SECTION
