[package]
name = "inferq"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP / Async
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Redis / Valkey
fred = { version = "9", features = ["serde-json"] }

# HTTP client (for Ollama/Gemini)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Auth / Crypto
uuid = { version = "1", features = ["v4", "v7", "serde"] }
blake2 = "0.10"
base62 = "2"
hex = "0.4"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28"

# ClickHouse
clickhouse = { version = "0.13", features = ["time"] }

# Config
config = "0.14"

# Misc
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"
time = { version = "0.3.47", features = ["formatting"] }
