[package]
name = "veronex-agent"
version = "0.1.0"
edition = "2024"
description = "Lightweight hardware metrics agent for veronex — exposes GPU/RAM stats over HTTP"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
