[package]
name = "veronex-agent"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
fred = { version = "10", features = ["enable-rustls-ring"] }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = "1"

# Workspace hack for faster builds (managed by cargo-hakari)
workspace-hack = { path = "../../workspace-hack" }

[dev-dependencies]
proptest = "1"
