[package]
name = "veronex-embed"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "veronex-embed"
path = "src/bin/veronex-embed.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
fastembed = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
