[package]
name = "veronex"
version = "0.0.1"
edition = "2024"

[dependencies]
# HTTP / Async
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time", "signal", "fs"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "compression-gzip", "compression-br"] }
pin-project-lite = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Redis / Valkey
fred = { version = "10", features = ["serde-json", "i-scripts", "subscriber-client", "i-pubsub", "i-streams"] }

# HTTP client (for Ollama/Gemini)
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }

# Auth / Crypto
uuid = { version = "1", features = ["v4", "v7", "serde"] }
blake2 = "0.10"
base62 = "2"
hex = "0.4"
rand = "0.9"
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32"

# Config
config = "0.14"

# S3 / object storage (MinIO-compatible)
aws-sdk-s3 = "1"
bytes = "1"
zstd = "0.13"

# Image processing (WebP conversion for inference job thumbnails)
image = { version = "0.25", default-features = false, features = ["webp", "jpeg", "png"] }

# Allocator
mimalloc = { version = "0.1", default-features = false }

# Type generation (Rust → TypeScript)
ts-rs = { version = "10", features = ["chrono-impl", "uuid-impl", "serde-json-impl", "serde-compat"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dashmap = "6"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
time = { version = "0.3.47", features = ["formatting"] }

# Token counter for context-budget pre-flight (S17 — context compression)
# cl100k_base provides ±10% accurate counts for non-OpenAI models
# (Qwen / Llama family) when paired with a conservative budget ratio.
tiktoken-rs = "0.6"

# MCP protocol client
veronex-mcp = { path = "../veronex-mcp" }

# Workspace hack for faster builds (managed by cargo-hakari)
workspace-hack = { path = "../../workspace-hack" }

[dev-dependencies]
proptest = "1"
wiremock = "0.6"
